[package]
name = "dbimport"
version = "0.1.0"
authors = ["Joyce Babu <joyce@ennexa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1"
ssh2 = { git = 'https://github.com/Ennexa/ssh2-rs' }
rpassword = "3.0.2"
shell-escape = "0.1.4"
indicatif = "0.11.0"
ctrlc = "3.1.3"
tempfile = "3.1.0"
bzip2 = "0.3.3"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
incremental = false
opt-level = "z"

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"

[target.x86_64-pc-windows-gnu]
linker = "/usr/local/bin/x86_64-w64-mingw32-gcc"

[[bin]]
name = "dbimport"
