[package]
name = "dbimport"
version = "0.1.0"
authors = ["Joyce Babu <joyce@ennexa.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.15"
regex = "1.5.5"
ssh2 = "0.9.3"
rpassword = "6.0.1"
shell-escape = "0.1.5"
indicatif = "0.16.0"
ctrlc = "3.2.2"
tempfile = "3.3.0"
bzip2 = "0.4.3"
serde_yaml = "0.8.24"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
incremental = false
opt-level = "z"

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"

[target.x86_64-pc-windows-gnu]
linker = "/usr/local/bin/x86_64-w64-mingw32-gcc"

[[bin]]
name = "dbimport"
