[package]
name = "dbimport"
version = "0.1.0"
authors = ["Joyce Babu <joyce@ennexa.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.23"
regex = "1.10.0"
ssh2 = "0.9.4"
rpassword = "7.2.0"
shell-escape = "0.1.5"
indicatif = "0.17.7"
ctrlc = "3.4.1"
tempfile = "3.8.0"
bzip2 = "0.4.4"
serde_yaml = "0.9.25"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
libz-sys = { version = "1.1.12", default-features = false, features = ["libc"] }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
incremental = false
opt-level = "z"

[package.metadata.cross.build]
pre-build = [
    "apt-get update && apt-get install --assume-yes libssl-dev"
]

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"

[target.x86_64-pc-windows-gnu]
linker = "/usr/local/bin/x86_64-w64-mingw32-gcc"

[[bin]]
name = "dbimport"
